--- a/notes/index.html
+++ b/notes/index.html
@@ -156,6 +156,7 @@
             border-radius: 8px;
             width: 90%;
             height: 90%;
+            max-width: 900px;
             z-index: 1001;
             display: flex;
             flex-direction: column;
@@ -204,7 +205,7 @@
         /* Previous styles for theme toggle, sidenav, etc. remain the same */
         .theme-toggle {
             position: absolute;
-            top: 20px;
+            bottom: 20px;
             cursor: pointer;
             background-color: var(--bg-color-light);
             color: var(--text-color-light);
@@ -340,20 +341,20 @@
         <section class="notes-section">
             <h2 class="section-title">HIGH SCHOOL</h2>
             <div class="notes-grid">
-                <div class="note-box" data-pdf="/notes/physics-mechanics.pdf" data-title="Physics Mechanics">
-                    <h3 class="note-title">Physics Mechanics</h3>
+                <div class="note-box" data-pdf="/notes/physics1.pdf" data-title="Physics 1">
+                    <h3 class="note-title">Physics 1</h3>
                     <p class="note-description">Kinematics, dynamics, energy, momentum, rotational motion, and simple harmonic motion.</p>
                 </div>
-                <div class="note-box" data-pdf="/notes/physics-em.pdf" data-title="Physics E&M">
-                    <h3 class="note-title">Physics E&M</h3>
+                <div class="note-box" data-pdf="/notes/calc1.pdf" data-title="Calculus 1">
+                    <h3 class="note-title">Calculus 1</h3>
                     <p class="note-description">Electricity, magnetism, circuits, and electromagnetic waves.</p>
                 </div>
-                <div class="note-box" data-pdf="/notes/calculus-ab.pdf" data-title="AP Calculus AB">
-                    <h3 class="note-title">AP Calculus AB</h3>
+                <div class="note-box" data-pdf="/notes/calc2.pdf" data-title="Calculus 2">
+                    <h3 class="note-title">Calculus 2 (unfinished)</h3>
                     <p class="note-description">Limits, derivatives, integrals, and their applications.</p>
                 </div>
-                <div class="note-box" data-pdf="/notes/calc3.pdf" data-title="AP Calculus BC">
-                    <h3 class="note-title">AP Calculus BC</h3>
+                <div class="note-box" data-pdf="/notes/calc3.pdf" data-title="Calculus 3">
+                    <h3 class="note-title">Calculus 3</h3>
                     <p class="note-description">Series, parametric equations, polar coordinates, and vector calculus.</p>
                 </div>
             </div>
