--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         /* Toggle Button */
         .theme-toggle {
             position: absolute;
-            top: 20px;
+            bottom: 20px;
             cursor: pointer;
             background-color: var(--bg-color-light);
             color: var(--text-color-light);
