--- a/projects/index.html
+++ b/projects/index.html
@@ -275,7 +275,7 @@
 
         .theme-toggle {
             position: absolute;
-            top: 20px;
+            bottom: 20px;
             cursor: pointer;
             background-color: var(--bg-color-light);
             color: var(--text-color-light);
