--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
             background-color: #f0f0f0;
         }
 
+        .column:hover::before {
+            background-color: rgba(255, 255, 255, 0.7);
+        }
+
         .column:active {
             transform: scale(1.3);
         }
