--- a/index.html
+++ b/index.html
@@ -465,6 +465,8 @@
 
             .home-link {
                 left: 20px;
+                top: auto;
+                vertical-align: middle;
                 writing-mode: horizontal-tb !important;
             }
 
@@ -507,7 +509,9 @@
 
             .theme-toggle {
                 right: 20px;
-                top: 10px;
+                vertical-align: middle;
+                /* top: 10px; */
+                bottom: auto;
             }
 
             .modal-content {
