--- a/projects/index.html
+++ b/projects/index.html
@@ -266,6 +266,24 @@
             text-decoration: underline;
             transform: scale(-1.1);
         }
+        .home-link {
+            position: absolute;
+            top: 20px;
+            writing-mode: horizontal-tb !important;
+            transform: none !important;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .home-link:hover {
+            transform: scale(1.1) !important;
+        }
+
+        .home-link svg {
+            width: 24px;
+            height: 24px;
+        }
 
         .footer {
             margin-top: 40px;
@@ -335,10 +353,17 @@
                 writing-mode: horizontal-tb;
                 transform: scale(1.1);
             }
-
+            .home-link {
+                left: 20px;
+                top: auto;
+                vertical-align: middle;
+                writing-mode: horizontal-tb !important;
+            }
             .theme-toggle {
                 right: 20px;
-                top: 10px;
+                vertical-align: middle;
+                /* top: 10px; */
+                bottom: auto;
             }
         }
     </style>
@@ -391,7 +416,12 @@
 
     <nav class="sidenav">
         <button class="theme-toggle" id="theme-toggle">🌞</button>
-        <a href="/">HOME</a>
+        <a href="" class="home-link">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+            </svg>
+        </a>
         <a href="/projects/">PROJECTS</a>
         <a href="/notes/">NOTES</a>
     </nav>
