--- a/index.html
+++ b/index.html
@@ -115,17 +115,18 @@
 
         .resume-button-container {
             display: flex;
-            align-items: stretch;
+            align-items: center;
             margin-right: 40px;
+            gap:4px;
         }
         .resume-button {
             padding: 13px;
-            padding-right: 7px;
-            border-radius: 5px 0px 0px 5px;
+            /* padding-right: 7px; */
+            border-radius: 5px;
             background-color: #eedd82;
             color: var(--text-color-light);
             border: 1px solid var(--line-color-light);
-            border-right: none;
+            /* border-right: none; */
             text-decoration: none;
             transition: transform 0.3s ease, background-color 0.5s ease;
             display: flex;
@@ -135,13 +136,14 @@
         }
 
         .resume-download {
-            padding: 13px;
-            padding-left: 3px;
-            border-radius: 0px 5px 5px 0px;
+            padding: 7px;
+            height: auto;
+            /* padding-left: 3px; */
+            border-radius: 5px 5px 5px 5px;
             background-color: #eedd82;
             color: var(--text-color-light);
             border: 1px solid var(--line-color-light);
-            border-left: none;
+            /* border-left: none; */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -155,14 +157,14 @@
             border-color: var(--line-color-dark);
         }
 
-        .resume-button-container:hover .resume-button {
+        .resume-button-container .resume-button:hover {
             transform: scale(1.05);
-            transform-origin: right;
+            /* transform-origin: right; */
             background-color: lightgoldenrodyellow;
         }
-        .resume-button-container:hover .resume-download {
+        .resume-button-container .resume-download:hover {
             transform: scale(1.05);
-            transform-origin: left;
+            /* transform-origin: left; */
             background-color: lightgoldenrodyellow;
         }
         body.dark-mode .resume-button-container:hover .resume-button,
@@ -288,7 +290,11 @@
 
         body.dark-mode .column:hover {
             transform: scale(1.05);
-            background-color: #2a2a2a;
+            /* background-color: #2a2a2a; */
+        }
+
+        body.dark-mode .column:hover::before {
+            background-color: rgba(42, 42, 42, 0.8);
         }
 
         body.dark-mode .column:active {
@@ -319,19 +325,83 @@
             transition: border-color 0.3s;
         }
 
-        body.dark-mode .about-section {
-            border-top-color: var(--line-color-dark);
+        .about-wrapper {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 60px;
+            margin-bottom: 30px;
         }
 
         .about-title {
             font-size: 16px;
-            margin-bottom: 20px;
             font-weight: Medium;
+            flex: 0 0 auto;
         }
 
         .about-content {
             font-size: 14px;
-            max-width: 600px;
+            flex: 1;
+        }
+
+        body.dark-mode .about-section {
+            border-top-color: var(--line-color-dark);
+        }
+
+        .photo-wrap {
+            padding-left: 20px;
+            padding-right: 50px;
+            align-items: center;
+        }
+
+        .photo-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            margin-top: 30px;
+            width: 100%;
+            /* border-top: 1px solid var(--line-color-light); */
+            /* border-left: 1px solid var(--line-color-light); */
+        }
+
+        body.dark-mode .photo-grid {
+            /* border-color: var(--line-color-dark); */
+        }
+
+        .photo-item {
+            padding: 0;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            background-color: var(--bg-color-light);
+            width: 100%;
+            /* border-right: 1px solid var(--line-color-light); */
+            /* border-bottom: 1px solid var(--line-color-light); */
+        }
+        .photo-item.large {
+            grid-column: span 2; 
+        }
+
+        body.dark-mode .photo-item {
+            background-color: var(--bg-color-dark);
+            border-color: var(--line-color-dark);
+        }
+
+        .photo-item:hover {
+            transform: scale(1.02);
+            z-index: 1;
+        }
+
+        .photo-item img {
+            width: 100%;
+            height: auto;
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        .photo-caption {
+            font-size: 13px;
+            text-align: center;
+            line-height: 1.3;
+            padding: 0 4px;
+            margin-bottom: 8px;
         }
 
         .sidenav {
@@ -429,6 +499,13 @@
             transform: scale(1.1);
         }
 
+        @media screen and (max-width: 1024px) {
+            .photo-grid {
+                grid-template-columns: repeat(3, 1fr);  /* Switch to 2 columns on mobile */
+            }
+        }
+
+
         @media screen and (max-width: 768px) {
             body {
                 padding: 20px;
@@ -525,6 +602,10 @@
             body.dark-mode .modal-close {
                 color: var(--text-color-dark);
             }
+
+            .photo-grid {
+                grid-template-columns: repeat(2, 1fr);  /* Switch to 2 columns on mobile */
+            }
         }
     </style>
 </head>
@@ -590,13 +671,44 @@
         </div>
 
         <section class="about-section">
-            <h2 class="about-title">ABOUT</h2>
-            <div class="about-content">
-                <p>Mechanical engineering student focused on mechatronics and cars.</p>
-                <p style="margin-top: 15px">I love hiking INSERT MORE</p>
+            <div class="about-wrapper">
+                <h2 class="about-title">ABOUT</h2>
+                <div class="about-content">
+                    <p>Hey! I'm a mechanical engineering student @ UCLA, with particular interest in mechatronics and cars -- I'm always looking for more projects to work on, so let me know if there's any projects I can help out with!</p>
+                    <p style="margin-top: 7px">Aside from learning/creating, I love hiking, lifting, and music.</p>
+                    <div class="photo-wrap">
+                        <div class="photo-grid">
+                            <div class="photo-item">
+                                <img src="/images/pfp2.png" alt="Drive team celebrating">
+                                <p class="photo-caption">Drive team celebrating after a</p>
+                            </div>
+                            <div class="photo-item large">
+                                <img src="/images/proj1.png" alt="asdf">
+                                <p class="photo-caption">asf</p>
+                            </div>
+                            <div class="photo-item">
+                                <img src="images/hiking.jpg" alt="Hasdf">
+                                <p class="photo-caption">HikiasdfA</p>
+                            </div>
+                            <div class="photo-item large">
+                                <img src="images/hiking.jpg" alt="Hasdf">
+                                <p class="photo-caption">Hikinasdf WA</p>
+                            </div>
+                            <div class="photo-item">
+                                <img src="images/pfp.png" alt="Hiadfe">
+                                <p class="photo-caption">Hasf</p>
+                            </div>
+                            <div class="photo-item">
+                                <img src="images/proj1.png" alt="Hikiasdf">
+                                <p class="photo-caption">Hiadsfa</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
+    
 
     <nav class="sidenav">
         <button class="theme-toggle" id="theme-toggle">🌞</button>
@@ -611,7 +723,14 @@
     </nav>
 
     <footer class="footer">
-        <p>© 2024 Terry Yu</p>
+        <p style="text-align:left;">
+            Made by Terry Yu
+            <span style="float:right;">
+                <i>
+                    last updated Oct 2024
+                </i>
+            </span>
+        </p>
     </footer>
 
     <script>
