--- a/notes/index.html
+++ b/notes/index.html
@@ -61,9 +61,15 @@
         }
 
         .section-title {
-            font-size: 24px;
+            font-size: 22px;
             margin-bottom: 1px;
             font-weight: bold;
+        }
+
+        .education-title {
+            font-size: 18px;
+            margin-bottom: 1px;
+            font-weight: normal;
         }
 
         /* Notes Grid Layout */
@@ -83,7 +89,7 @@
 
         .notes-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(4, 2fr);
             gap: 20px;
             margin-top: 20px;
         }
@@ -115,14 +121,17 @@
 
         .note-title {
             font-size: 16px;
-            margin-bottom: 10px;
-            font-weight: bold;
+            padding-bottom: 7px;
+            margin-bottom: 13px;
+            border-bottom: 1px solid var(--line-color-light);
+            font-weight: normal;
         }
 
         .note-description {
-            font-size: 14px;
+            font-size: 13px;
             color: var(--text-color-light);
             opacity: 0.8;
+            font-style: italic;
         }
 
         body.dark-mode .note-description {
@@ -292,6 +301,7 @@
             padding-top: 20px;
             border-top: 1px solid var(--line-color-light);
             font-size: 14px;
+            transition: border-color 0.3s;
         }
 
         body.dark-mode .footer {
@@ -318,7 +328,7 @@
             }
 
             .notes-grid {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(2, 1fr);
             }
 
             .sidenav {
@@ -374,21 +384,21 @@
 
     <main>
         <section class="notes-section">
-            <h2 class="section-title">HIGH SCHOOL</h2>
+            <h2 class="education-title">HIGH SCHOOL</h2>
             <div class="notes-grid">
-                <div class="note-box" data-pdf="/notes/physics1.pdf" data-title="Physics 1">
+                <div class="note-box" data-pdf="/notes/pdfs/physics1.pdf" data-title="Physics 1">
                     <h3 class="note-title">Physics 1</h3>
                     <p class="note-description">Kinematics, dynamics, energy, momentum, rotational motion, and simple harmonic motion.</p>
                 </div>
-                <div class="note-box" data-pdf="/notes/calc1.pdf" data-title="Calculus 1">
+                <div class="note-box" data-pdf="/notes/cpdfs/alc1.pdf" data-title="Calculus 1">
                     <h3 class="note-title">Calculus 1</h3>
                     <p class="note-description">Electricity, magnetism, circuits, and electromagnetic waves.</p>
                 </div>
-                <div class="note-box" data-pdf="/notes/calc2.pdf" data-title="Calculus 2">
+                <div class="note-box" data-pdf="/notes/pdfs/calc2.pdf" data-title="Calculus 2">
                     <h3 class="note-title">Calculus 2 (unfinished)</h3>
                     <p class="note-description">Limits, derivatives, integrals, and their applications.</p>
                 </div>
-                <div class="note-box" data-pdf="/notes/calc3.pdf" data-title="Calculus 3">
+                <div class="note-box" data-pdf="/notes/pdfs/calc3.pdf" data-title="Calculus 3">
                     <h3 class="note-title">Calculus 3</h3>
                     <p class="note-description">Series, parametric equations, polar coordinates, and vector calculus.</p>
                 </div>
@@ -396,7 +406,7 @@
         </section>
 
         <section class="notes-section">
-            <h2 class="section-title">BACHELOR'S</h2>
+            <h2 class="education-title">BACHELOR'S</h2>
             <div class="notes-grid">
                 <div class="note-box" data-pdf="/notes/dynamics.pdf" data-title="Dynamics">
                     <h3 class="note-title">Dynamics</h3>
@@ -442,7 +452,14 @@
     </nav>
 
     <footer class="footer">
-        <p>© 2024 Terry Yu</p>
+        <p style="text-align:left;">
+            Made by Terry Yu
+            <span style="float:right;">
+                <i>
+                    last updated Oct 2024
+                </i>
+            </span>
+        </p>
     </footer>
 
     <script>
