--- a/projects/index.html
+++ b/projects/index.html
@@ -180,6 +180,9 @@
         .project-card:hover {
             transform: translateY(-4px);
         }
+        .project-card:active {
+            transform: translateY(-16px);
+        }
 
         .project-title {
             font-size: 16px !important;
@@ -397,9 +400,23 @@
         <div class="project-section" id="clubs-section">
             <h2>Extracurricular Clubs</h2>
             <div class="projects-grid">
-                <a href="proj1.html" class="project-link">
+                <a href="clubs-proj3.html" class="project-link">
                     <div class="project-card" style="background-image: url('/images/projects.jpeg')">
-                        <h2 class="project-title">Suspension Design</h2>
+                        <h2 class="project-title">Mk 10 Sprocket and Chain -- FSAE</h2>
+                        <p class="project-description">Design and optimization of the suspension system for the clubs race car.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
+                <a href="clubs-proj2.html" class="project-link">
+                    <div class="project-card" style="background-image: url('/images/projects.jpeg')">
+                        <h2 class="project-title">Hydrogen Fuel Cell -- Supermileage</h2>
+                        <p class="project-description">Design and optimization of the suspension system for the clubs race car.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
+                <a href="clubs-proj1.html" class="project-link">
+                    <div class="project-card" style="background-image: url('/images/projects.jpeg')">
+                        <h2 class="project-title">Mk 9 CV Boot & Mold -- FSAE</h2>
                         <p class="project-description">Design and optimization of the suspension system for the clubs race car.</p>
                         <div class="tags-container"></div>
                     </div>
@@ -412,7 +429,7 @@
             <div class="projects-grid">
                 <a href="" class="project-link">
                     <div class="project-card" style="background-image: url('/images/research-project.jpg')">
-                        <h2 class="project-title">Engine Control Unit</h2>
+                        <h2 class="project-title">Beel Research Group -- PDMS Chip/Housing</h2>
                         <p class="project-description">Custom ECU development for optimal fuel efficiency.</p>
                         <div class="tags-container"></div>
                     </div>
@@ -425,7 +442,42 @@
             <div class="projects-grid">
                 <a href="" class="project-link">
                     <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
-                        <h2 class="project-title">Home Automation</h2>
+                        <h2 class="project-title">Pen Plotter</h2>
+                        <p class="project-description">Custom-built home automation system with IoT integration.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
+                <a href="" class="project-link">
+                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                        <h2 class="project-title">Electric Go Kart</h2>
+                        <p class="project-description">Custom-built home automation system with IoT integration.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
+                <a href="" class="project-link">
+                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                        <h2 class="project-title">Fingerprint Door Unlocker</h2>
+                        <p class="project-description">Custom-built home automation system with IoT integration.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
+                <a href="" class="project-link">
+                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                        <h2 class="project-title">Portfolio Website</h2>
+                        <p class="project-description">Custom-built home automation system with IoT integration.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
+                <a href="" class="project-link">
+                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                        <h2 class="project-title">Recirculating Ball Linear Rails</h2>
+                        <p class="project-description">Custom-built home automation system with IoT integration.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
+                <a href="" class="project-link">
+                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                        <h2 class="project-title">Misc</h2>
                         <p class="project-description">Custom-built home automation system with IoT integration.</p>
                         <div class="tags-container"></div>
                     </div>
