--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
 
             .photo-wrap {
                 padding-left: 0;
-                padding-right: 0;
+                padding-right: 20;
                 max-width: 280px;
             }
 
@@ -759,7 +759,7 @@
                             </div>
                         </div>
                 
-                        <div class="music-player">
+                        <!-- <div class="music-player">
                             <div class="music-controls">
                                 <svg class="music-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M9 18V5l12-2v13"></path>
@@ -775,7 +775,7 @@
                             <div class="spotify-embed">
                                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/63TYyeXlBYoYKNvE6rT3hI?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                            </div>
                         </div>     
-                    </div>               
+                    </div>                -->
                 </div>
             </div>
         </section>
