--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
         }
 
         .photo-wrap {
-            /* padding-left: 20px; */
+            padding-left: 20px;
+            padding-right: 50px;
             display: flex;
             gap: 30px;
             align-items: flex-start;
