--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Terry Yu | Portfolio</title>
     <meta name="google-site-verification" content="-yAzYtsG5CNLvD299Sl787ZO6-siX4KiVmkEjEUNIMQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Terry Yu's portfolio website featuring mechanical engineering projects and class notes">
+    <meta name="description" content="Terry Yu's portfolio website">
     <style>
         :root {
             --bg-color-light: #ffffff;
