--- a/notes/index.html
+++ b/notes/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Terry Yu | Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Terry Yu's academic notes from high school and university">
+    <meta name="description" content="Terry Yu's typed academic notes">
     <style>
         :root {
             --bg-color-light: #ffffff;
@@ -104,6 +104,7 @@
             color: inherit;
             transition: transform 0.3s ease, background-color 0.3s ease;
             cursor: pointer;
+            position: relative;
         }
 
         body.dark-mode .note-box {
@@ -135,6 +136,19 @@
         }
 
         body.dark-mode .note-description {
+            color: var(--text-color-dark);
+        }
+
+        .note-pages {
+            font-size: 12px;
+            color: var(--text-color-light);
+            opacity: 0.7;
+            position: absolute;
+            bottom: 15px;
+            right: 20px;
+        }
+
+        body.dark-mode .note-pages {
             color: var(--text-color-dark);
         }
 
@@ -384,45 +398,72 @@
 
     <main>
         <section class="notes-section">
+            <h2 class="education-title">BACHELOR</h2>
+            <div class="notes-grid">
+                <div class="note-box" data-pdf="/notes/pdfs/calc3.pdf" data-title="Calculus 3">
+                    <h3 class="note-title">Calculus 3</h3>
+                    <p class="note-description">Series, parametric equations, polar coordinates, and vector calculus.</p>
+                    <div class="note-pages">Pages: 116</div>
+                </div>
+                <div class="note-box" data-pdf="/notes/pdfs/linalg.pdf" data-title="Linear Algebra">
+                    <h3 class="note-title">Linear Algebra</h3>
+                    <p class="note-description">Matrices, determinants, and transformations.</p>
+                    <div class="note-pages">(unfinished) Pages: 24</div>
+                </div>
+                <div class="note-box" data-pdf="/notes/pdfs/diffeq.pdf" data-title="Thermodynamics">
+                    <h3 class="note-title">Differential Equations</h3>
+                    <p class="note-description">Solving first and second order DEs, laplace transforms, etc.</p>
+                    <div class="note-pages">(unfinished) Pages: 8</div>
+                </div>
+                <div class="note-box" data-pdf="/notes/pdfs/ee100.pdf" data-title="Electrical and Electronic Circuits">
+                    <h3 class="note-title">Electrical and Electronic Circuits</h3>
+                    <p class="note-description">Linear circuit elements, analysis and behavior of circuits and waveforms.</p>
+                    <div class="note-pages">(unfinished) Pages: 16</div>
+                </div>
+            </div>
+        </section>
+        <section class="notes-section">
             <h2 class="education-title">HIGH SCHOOL</h2>
             <div class="notes-grid">
-                <div class="note-box" data-pdf="/notes/pdfs/physics1.pdf" data-title="Physics 1">
-                    <h3 class="note-title">Physics 1</h3>
-                    <p class="note-description">Kinematics, dynamics, energy, momentum, rotational motion, and simple harmonic motion.</p>
-                </div>
-                <div class="note-box" data-pdf="/notes/cpdfs/alc1.pdf" data-title="Calculus 1">
+                <div class="note-box" data-pdf="/notes/pdfs/calc1.pdf" data-title="Calculus 1">
                     <h3 class="note-title">Calculus 1</h3>
-                    <p class="note-description">Electricity, magnetism, circuits, and electromagnetic waves.</p>
+                    <p class="note-description">Introduction to Calculus, with limits, derivatives, and integrals.</p>
+                    <div class="note-pages">Pages: 10</div>
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/calc2.pdf" data-title="Calculus 2">
                     <h3 class="note-title">Calculus 2 (unfinished)</h3>
                     <p class="note-description">Limits, derivatives, integrals, and their applications.</p>
+                    <div class="note-pages">(unfinished) Pages: 16</div>
                 </div>
-                <div class="note-box" data-pdf="/notes/pdfs/calc3.pdf" data-title="Calculus 3">
-                    <h3 class="note-title">Calculus 3</h3>
-                    <p class="note-description">Series, parametric equations, polar coordinates, and vector calculus.</p>
+                <div class="note-box" data-pdf="/notes/pdfs/physics1.pdf" data-title="Physics 1">
+                    <h3 class="note-title">Physics 1</h3>
+                    <p class="note-description">Basics of Newton's laws and applications.</p>
+                    <div class="note-pages">Pages: 29</div>
                 </div>
-            </div>
-        </section>
-
-        <section class="notes-section">
-            <h2 class="education-title">BACHELOR'S</h2>
-            <div class="notes-grid">
-                <div class="note-box" data-pdf="/notes/dynamics.pdf" data-title="Dynamics">
-                    <h3 class="note-title">Dynamics</h3>
-                    <p class="note-description">Motion of particles and rigid bodies, Newton's laws, work-energy, impulse-momentum.</p>
+                <div class="note-box" data-pdf="/notes/pdfs/physics2.pdf" data-title="Physics 2">
+                    <h3 class="note-title">Physics 2</h3>
+                    <p class="note-description">Electricity/Magnetism, Maxwell's equations and basic circuit theory.</p>
+                    <div class="note-pages">(unfinished) Pages: 6</div>
                 </div>
-                <div class="note-box" data-pdf="/notes/thermodynamics.pdf" data-title="Thermodynamics">
-                    <h3 class="note-title">Thermodynamics</h3>
-                    <p class="note-description">Energy, entropy, heat transfer, power cycles, and refrigeration.</p>
+                <div class="note-box" data-pdf="/notes/pdfs/workenergyeqsheet.pdf" data-title="Work and Energy">
+                    <h3 class="note-title">Work and Energy</h3>
+                    <p class="note-description">Equation sheet for all work and energy related concepts.</p>
+                    <div class="note-pages">Pages: 3</div>
                 </div>
-                <div class="note-box" data-pdf="/notes/controls.pdf" data-title="Controls">
-                    <h3 class="note-title">Controls</h3>
-                    <p class="note-description">System modeling, feedback control, stability analysis, and controller design.</p>
+                <!-- <div class="note-box" data-pdf="/notes/pdfs/physicsprobs.pdf" data-title="Physics Problems">
+                    <h3 class="note-title">Physics Problems</h3>
+                    <p class="note-description">Collection of favorite physics problems either that I've struggled on.</p>
+                    <div class="note-pages">(unfinished) Pages: 1</div>
+                </div> -->
+                <div class="note-box" data-pdf="/notes/pdfs/apcsrev.pdf" data-title="Inheritance">
+                    <h3 class="note-title">Java Inheritance</h3>
+                    <p class="note-description">Notes for the AP Computer Science exam, with a couple errors.</p>
+                    <div class="note-pages">Pages: 2</div>
                 </div>
-                <div class="note-box" data-pdf="/notes/mechatronics.pdf" data-title="Mechatronics">
-                    <h3 class="note-title">Mechatronics</h3>
-                    <p class="note-description">Sensors, actuators, microcontrollers, and system integration.</p>
+                <div class="note-box" data-pdf="/notes/pdfs/stats.pdf" data-title="Stats">
+                    <h3 class="note-title">Statistics (unfinished)</h3>
+                    <p class="note-description">Introductory statistics, common types of distributions and analysis.</p>
+                    <div class="note-pages">(unfinished) Pages: 3</div>
                 </div>
             </div>
         </section>
