--- a/projects/personal-fdu.html
+++ b/projects/personal-fdu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Suspension Design | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="clubs Suspension Design Project">
+    <meta name="description" content="Project">
     <style>
         :root {
             --bg-color-light: #ffffff;
