--- a/notes/index.html
+++ b/notes/index.html
@@ -416,7 +416,7 @@
                     <div class="note-pages">(unfinished) Pages: 8</div>
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/ee100.pdf" data-title="Electrical and Electronic Circuits">
-                    <h3 class="note-title">Electrical and Electronic Circuits</h3>
+                    <h3 class="note-title">Electrical & Electronic Circuits</h3>
                     <p class="note-description">Linear circuit elements, analysis and behavior of circuits and waveforms.</p>
                     <div class="note-pages">(unfinished) Pages: 16</div>
                 </div>
@@ -431,7 +431,7 @@
                     <div class="note-pages">Pages: 10</div>
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/calc2.pdf" data-title="Calculus 2">
-                    <h3 class="note-title">Calculus 2 (unfinished)</h3>
+                    <h3 class="note-title">Calculus 2</h3>
                     <p class="note-description">Limits, derivatives, integrals, and their applications.</p>
                     <div class="note-pages">(unfinished) Pages: 16</div>
                 </div>
@@ -446,7 +446,7 @@
                     <div class="note-pages">(unfinished) Pages: 6</div>
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/workenergyeqsheet.pdf" data-title="Work and Energy">
-                    <h3 class="note-title">Work and Energy</h3>
+                    <h3 class="note-title">Work & Energy</h3>
                     <p class="note-description">Equation sheet for all work and energy related concepts.</p>
                     <div class="note-pages">Pages: 3</div>
                 </div>
@@ -461,7 +461,7 @@
                     <div class="note-pages">Pages: 2</div>
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/stats.pdf" data-title="Stats">
-                    <h3 class="note-title">Statistics (unfinished)</h3>
+                    <h3 class="note-title">Statistics</h3>
                     <p class="note-description">Introductory statistics, common types of distributions and analysis.</p>
                     <div class="note-pages">(unfinished) Pages: 3</div>
                 </div>
