--- a/notes/index.html
+++ b/notes/index.html
@@ -402,7 +402,7 @@
             <div class="notes-grid">
                 <div class="note-box" data-pdf="/notes/pdfs/calc3.pdf" data-title="Calculus 3">
                     <h3 class="note-title">Calculus 3</h3>
-                    <p class="note-description">Series, parametric equations, polar coordinates, and vector calculus.</p>
+                    <p class="note-description">Multivariable calculus, partial derivatives, multiple integrals, and vector calculus.</p>
                     <div class="note-pages">Pages: 116</div>
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/linalg.pdf" data-title="Linear Algebra">
