--- a/notes/index.html
+++ b/notes/index.html
@@ -417,7 +417,7 @@
                 </div>
                 <div class="note-box" data-pdf="/notes/pdfs/ee100.pdf" data-title="Electrical and Electronic Circuits">
                     <h3 class="note-title">Electrical & Electronic Circuits</h3>
-                    <p class="note-description">Linear circuit elements, analysis and behavior of circuits and waveforms.</p>
+                    <p class="note-description">Circuit elements and analysis, waveforms, etc.</p>
                     <div class="note-pages">(unfinished) Pages: 16</div>
                 </div>
             </div>
