--- a/notes/index.html
+++ b/notes/index.html
@@ -410,7 +410,7 @@
                     <p class="note-description">Matrices, determinants, and transformations.</p>
                     <div class="note-pages">(unfinished) Pages: 24</div>
                 </div>
-                <div class="note-box" data-pdf="/notes/pdfs/diffeq.pdf" data-title="Thermodynamics">
+                <div class="note-box" data-pdf="/notes/pdfs/diffeq.pdf" data-title="Differential Equations">
                     <h3 class="note-title">Differential Equations</h3>
                     <p class="note-description">Solving first and second order DEs, laplace transforms, etc.</p>
                     <div class="note-pages">(unfinished) Pages: 8</div>
